# search-web-mcp

./: .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: publish.yml
src/: client.rs  lib.rs  main.rs
src/tools/: search.rs
