[package]
name = "search-web-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
url = "2.4"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", tag = "rmcp-v0.6.0", package = "rmcp", features = ["server", "transport-io", "macros"] }
schemars = "1"
